# AlphaOS

./: CMakeLists.txt  README.md  clean.sh  copyiso.sh  create.sh  iso.sh  kernel.c  qemu.sh  update.sh
isodir/boot/grub/: grub.cfg
kernel/: CMakeLists.txt  Makefile
kernel/arch/i386/: boot.S  gdt_asm.S  gdt_c.c  grub.c  heap.c  idt_asm.S  idt_c.c  isr_asm.S  isr_c.c  keyboard.c  make.config  pic.c  ps2.c  test.S  timer.c  tty.c
kernel/data_structures/: cQueue.c  make.config
kernel/include/grub/: multiboot.h
kernel/include/kernel/: cQueue.h  debug.h  gdt.h  grub.h  heap.h  idt.h  io.h  kernel_io.h  keyboard.h  pic.h  ps2.h  timer.h
kernel/kernel/: kernel.c
libc/: .gitignore
libc/stdio/: printf.c
sysroot/boot/: alphaos.kernel
sysroot/usr/include/kernel/: isr.h  ps2.h  tty.h
sysroot/usr/include/sys/: cdefs.h
